<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".newsreader.NewsMain"
    android:background="@color/grey"
    android:id="@+id/news_layout">

    <android.support.v7.widget.Toolbar
        android:id="@+id/news_toolbar"
        android:background="@color/lightgrey"
        android:elevation="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <RelativeLayout
        android:id="@+id/news_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/borderbox"
        android:layout_below="@+id/news_toolbar"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/news_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/news_load"
            android:text="@string/CBCNewsReaderText" />

        <Button
            android:id="@+id/news_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/news_credits"
            android:text="@string/news_load" />

        <Button
            android:id="@+id/news_credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/news_credits"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/news_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/news_header"
        android:layout_above="@+id/news_progressbar"
        android:padding="10dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"></ListView>

    <ProgressBar
        android:id="@+id/news_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="visible" />

</RelativeLayout>